--- a/src/main/resources/develop_info.properties
+++ b/src/main/resources/develop_info.properties
@@ -12,7 +12,9 @@ topic_bus_score=vdp_score
 topic_bus_rapid=vdp_threeRapid
 vdp_ridestatus=vdp_ridestatus
 #redis
-redis=192.168.100.101
+redis.host=192.168.100.101
+redis.port=6379
+redis.timeout=2000
 #hbase
 hbase.zookeeper.property.clientPort=2181
 hbase.zookeeper.quorum=192.168.100.11,192.168.100.177,192.168.100.204
